--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ p {
   color: #f4f4f4;
 }
 
+.bg-primary {
+  background: #93cb52;
+  color: #fff;
+}
+
 .l-heading {
   font-size: 4rem;
   margin-bottom: 0.75rem;
@@ -62,13 +67,25 @@ p {
   margin-bottom: 2rem;
 }
 
-.py-1 { padding: 1.5rem 0; }
-.py-2 { padding: 2rem 0; }
-.py-3 { padding: 3rem 0; }
+.py-1 {
+  padding: 1.5rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
 
-.p-1 { padding: 1.5rem; }
-.p-2 { padding: 2rem; }
-.p-3 { padding: 3rem; }
+.p-1 {
+  padding: 1.5rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.p-3 {
+  padding: 3rem;
+}
 
 .btn {
   display: inline-block;
@@ -179,11 +196,10 @@ p {
 }
 
 #who .who-img {
-  background: url('../img/people.jpg') no-repeat
-  center center/cover;
+  background: url('../img/people.jpg') no-repeat center center/cover;
 }
 
-/* Clients */
+/* Section: Clients */
 #clients .items {
   display: flex;
 }
@@ -192,4 +208,28 @@ p {
   display: block;
   margin: auto;
   width: 60%;
+}
+
+/* Section: Contact */
+#contact {
+  display: flex;
+}
+
+#contact .map,
+#contact .contact-form {
+  flex: 1;
+}
+
+#contact .contact-form .form-group {
+  margin: 0.75rem;
+}
+
+#contact .contact-form label {
+  display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea {
+  width: 100%;
+  padding: 0.5rem;
 }
